# mathcadconvert

./: CMakeLists.txt  LICENSE
include/: converter_func.hpp  matlab.hpp
src/: main.cpp  matlab.cpp
test/: simple_tags.cpp
